sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: overloaded method value / with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Int, Int)
      ecart=ecart/(1,3)
                 ^AlgCombSort:14: error: not found: value plustPetit
      if (plustPetit(i+ecart,i)){
          ^